--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,10 +1,16 @@
 // IMPORT BOOTSTRAP 5
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Josefin+Sans:wght@400;600&display=swap');
+
 $white : #F8F1F1;
 $dark_blue: #00353F;
 $light_blue : #08C5D1;
 $yellow : #FFBF66;
 $orange : #D46F4D;
 $dark_brown : #430C05;
+$Josefin: 'Josefin Sans', sans-serif; 
+$Abel: 'Abel', sans-serif;
+$title-fontweight: 600;
+$subtitle-fontweight: 400;
 
 .navadditional{
     height: 4rem;
@@ -13,5 +19,7 @@ $dark_brown : #430C05;
 $light : $white;
 $dark: $dark_brown;
 
-
+$font-family-base : $Abel;
+$btn-font-family: $Josefin;
+$body-color: $orange;
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
